fixed a chrome bug caused by html overflow hidden -> show && disabled scroll before loading using .on

--- a/public/styled/style.less
+++ b/public/styled/style.less
@@ -170,7 +170,7 @@ He's been doing it since the age of 13.
 div,h1,h2,h3,h4{
 	position: relative;
 }
-html,body{
+body{
 	overflow: hidden;
 }
 body {
